fix alignment & line drawing issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html{
+  
+}
 .selected {
   /* background-color: black;
   color: white;
  @apply  border-red-600 ring-offset-2 ring-2; */
  @apply text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2;
-  /* Add any additional styles to indicate selection */
+  
 }
+button{
+  @apply text-xs font-bold;
+}
+#root{
+   @apply w-screen
+  
+}
+
